fixed search button being pushed up on mobile, added pulse to search button

--- a/src/styles.css
+++ b/src/styles.css
@@ -84,10 +84,32 @@ input[type="submit"] {
      backdrop-filter: blur(5px);
     border: none;
     cursor: pointer;
+
+  -webkit-appearance: none;
+  appearance: none;
+  line-height: 0;
+  padding: 0;
+  vertical-align: middle;
 }
 
-input[type="submit"]:hover {
-    background-color: rgba(0, 0, 139, 0.800);
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+        box-shadow: 0 0 6px 2px rgb(0, 0, 139);
+    }
+    50% {
+        transform: scale(1.1);
+        box-shadow: 0 0 12px 4px rgba(247, 230, 2, 0.8);
+    }
+    100% {
+        transform: scale(1);
+        box-shadow: 0 0 6px 2px rgb(0, 0, 139);
+    }
+}
+
+input[type="submit"]:active {
+    animation: pulse 0.3s ease;
 }
 
 
